--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ h3 {
 img {
   height: 25px;
   width: 25px;
-  border-radius: 50px;
+  border-radius: 50%;
 }
 
 ul {
@@ -42,10 +42,13 @@ li {
   align-items: center;
   align-content: center;
   flex-direction: row;
+  display: inline-flex;
+  justify-content: space-between;
+  width: 83%;
 }
 
 .info-container {
-  margin: 20px;
+  margin: 8px;
 }
 
 .employee-image {
